<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/buy"
            android:icon="@drawable/ic_baseline_money_24"
            android:title="@string/title_nav_tokens" />
        <item
            android:id="@+id/nav_transaction_records"
            android:icon="@drawable/ic_baseline_insert_chart_24"
            android:title="@string/title_nav_transaction_records" />
        <item
            android:id="@+id/myfiles"
            android:icon="@drawable/ic_baseline_folder_24"
            android:title="@string/title_nav_content" />

    </group>

    <item android:title="@string/title_nav_more">
        <menu>
            <item
                android:id="@+id/messages"
                android:icon="@drawable/ic_baseline_message_24"
                android:title="@string/title_nav_messages" />
        </menu>
    </item>

    <item android:title="@string/title_nav_tools">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/title_nav_settings" />
            <item
                android:id="@+id/support"
                android:icon="@drawable/ic_baseline_sentiment_satisfied_alt_24"
                android:title="@string/title_nav_support" />
            <item
                android:id="@+id/terms"
                android:icon="@drawable/ic_baseline_insert_drive_file_24"
                android:title="@string/title_nav_terms_and_conditions" />
            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_baseline_policy_24"
                android:title="@string/title_nav_privacy_policy"/>
        </menu>
    </item>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/title_nav_log_out" />

</menu>
