<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/action_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/upload"
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        android:title="@string/menu_upload_file"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sub_menu_audio"
                android:title="@string/radio_audio"/>
            <item
                android:id="@+id/sub_menu_video"
                android:title="@string/radio_video"/>
            <item
                android:id="@+id/sub_menu_doc"
                android:title="@string/radio_doc"/>
        </menu>
    </item>

    </menu>

