<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailVerificationActivity"
    android:background="?attr/attrBackgroundColor">

    <include
        layout="@layout/app_bar_layout_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:text="@string/info_sending_verification_email_please_wait"
            android:textSize="18sp"
            android:textColor="?attr/attrTextColor"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txt_resend_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:text="@string/info_we_have_sent_verification_link_to_the_email_address_provided"
            android:textSize="@dimen/text_primary_size"
            android:textColor="?attr/attrTextColor"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_resend_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_small_margin"
            android:padding="@dimen/button_small_padding"
            android:layout_gravity="center"
            android:text="@string/option_resend_verification_link"
            android:textAllCaps="false"
            android:textColor="?attr/attrButtonTextColor"
            android:background="@drawable/button_primary"
            android:visibility="gone"/>

    </LinearLayout>

</FrameLayout>
