<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectGenreActivity"
    android:background="?attr/attrBackgroundColor">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_gravity="center">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/radio_margin"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/radio_coursework"
                    android:text="@string/radio_coursework"
                    android:textColor="?attr/attrTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/radio_non_coursework"
                    android:text="@string/radio_non_coursework"
                    android:textColor="?attr/attrTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:padding="5sp"
                android:text="@string/title_select_institution"
                android:textColor="?attr/attrTextSecondaryColor"
                android:drawablePadding="10dp"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_genre_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spinner_margin"
                android:layout_marginTop="@dimen/spinner_margin"
                android:spinnerMode="dropdown"
                android:padding="@dimen/spinner_padding"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:onClick="performFilter"
                android:text="@string/option_select"
                android:textAllCaps="false"
                android:background="@drawable/button_primary"
                android:textColor="?attr/attrButtonTextColor"
                android:visibility="visible"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</androidx.drawerlayout.widget.DrawerLayout>