<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="HardcodedText"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/attrBackgroundColor"
    tools:context=".MyFilesActivity_UploadsFragment">

    <TextView
        android:id="@+id/txt_upload_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_loading"
        android:textColor="?attr/attrTextColor"
        android:textStyle="bold"
        android:textSize="@dimen/text_primary_size"
        android:layout_gravity="center"
        android:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/layout_recycler_myuploads"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

    </androidx.recyclerview.widget.RecyclerView>

<!--    <com.github.clans.fab.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|end"-->
<!--        android:layout_margin="8dp"-->
<!--        android:src="@drawable/ic_baseline_cloud_upload_24"-->
<!--        app:fab_colorNormal="?attr/colorPrimary"-->
<!--        fab:menu_colorPressed="?attr/colorPrimaryDark"-->
<!--        fab:menu_colorRipple="#99FFFFFF"-->
<!--        fab:fab_size="normal"-->
<!--        fab:menu_backgroundColor="@android:color/transparent"-->
<!--        fab:fab_label="@string/option_upload_file" -->
<!--        android:visibility="gone"/>-->

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="0dp"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="?attr/colorPrimary"
        fab:menu_colorPressed="?attr/colorPrimaryDark"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/ic_baseline_cloud_upload_24"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14dp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="@android:color/transparent"
        fab:menu_labels_colorRipple="@android:color/transparent"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_audiotrack_24"
            app:fab_colorNormal="?attr/colorPrimaryDark"
            fab:menu_colorPressed="?attr/attrButtonColor"
            fab:fab_size="mini"
            fab:fab_label="@string/radio_audio" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_ondemand_video_24"
            app:fab_colorNormal="?attr/colorPrimaryDark"
            fab:menu_colorPressed="?attr/attrButtonColor"
            fab:fab_size="mini"
            fab:fab_label="@string/radio_video"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_insert_drive_file_24_white"
            app:fab_colorNormal="?attr/colorPrimaryDark"
            fab:menu_colorPressed="?attr/attrButtonColor"
            fab:fab_size="mini"
            fab:fab_label="@string/radio_doc"/>

    </com.github.clans.fab.FloatingActionMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
